updated jquery lib and fixed margin/padding on mobile diplay

--- a/css/enderstudio.less
+++ b/css/enderstudio.less
@@ -43,16 +43,16 @@ src: url('../fonts/prometheus.ttf'),
 @portfolio-color:#363636;
 @portfolio-color-header:#a3ff75;
 @portfolio-color-header-hover:#65cf31;
-
 @error-bg:#ffd6d6;
+
 body, html {
-    height: 100%;width:100%;
+    height: 100%;
+	width:100%;
 	margin: 0;
     padding: 0;
 }
 body{ 
 	position:relative;
-	background: @background;
 	font-size:0.65em;
     color: @font-color-1st;
     font-family: @font-body;
