--- a/css/media.css
+++ b/css/media.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 767px) {
 	body{
-		font-size:0.45em;
+		font-size:0.65em;
 		overflow-x:hidden!important;
 	}
 
